k8sManifest/ingress/backingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/subnets: subnet-02ce02fdd95dd2fe3,subnet-0f600f38ed0ab7026
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-1:207834583394:certificate/16359e3a-d997-438c-bc83-919050e6d6b8"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: back.jecheolso.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-back-svc
            port: 
              number: 80
